Bug 175842. Sending MSAA STATE_CHANGE event on old window, should be on new one. r=kyle, sr=jst, a=roc+moz